Created Tests:  - change pom.xml  - created hibernate-test.properties  - import.sql  - created AbstractIntegrationTest  - created ConsoleInputServiceTest  - changed CityRepositoryTest  - changed CountryRepositoryTest  - changed RedisServiceTest  - changed TransformDataServiceTest  - created DatabaseServiceTest  - created DBPerformanceServiceTest  - created SessionFactoryConfigTest  - created RedisConfigTest  - created PerformanceTestServiceTest  - created RunnerTest  - created MainTest