@@ -1,5 +1,6 @@
 package com.javarush.services;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.javarush.redis.CityCountry;
 import io.lettuce.core.RedisClient;
 import io.lettuce.core.api.StatefulRedisConnection;
@@ -10,10 +11,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Collections;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -29,52 +30,27 @@ class RedisServiceTest {
     @BeforeEach
     void setUp() {
         when(redisClient.connect()).thenReturn(connection);
-        redisService = new RedisService(redisClient);
-        clearInvocations(redisClient, connection);
+        when(connection.sync()).thenReturn(syncCommands);
+        redisService = new RedisService(redisClient, new ObjectMapper());
     }
 
     @Test
-    void shouldExecuteMethodPushToRedis() {
-        when(redisClient.connect()).thenReturn(connection);
-        when(connection.sync()).thenReturn(syncCommands);
+    void shouldMethodPushToRedisWorkCorrect() {
+        CityCountry cityCountry = new CityCountry();
+        cityCountry.setId(1);
+        cityCountry.setName("Kyiv");
 
-        CityCountry city = new CityCountry();
-        city.setId(1);
-        city.setName("Kyiv");
-
-        redisService.pushToRedis(Collections.singletonList(city));
+        redisService.pushToRedis(List.of(cityCountry));
 
         verify(syncCommands, times(1)).set(eq("1"), anyString());
-        verify(connection, times(1)).close();
     }
 
     @Test
-    void shouldFetchValuesFromRedisInMethodTestRedisData() {
-        when(redisClient.connect()).thenReturn(connection);
-        when(connection.sync()).thenReturn(syncCommands);
+    void shouldMethodTestRedisDataWorkCorrect() {
         when(syncCommands.get("1")).thenReturn("{\"id\":1,\"name\":\"Kyiv\"}");
 
         redisService.testRedisData(List.of(1));
 
-        verify(syncCommands, times(1)).get("1");
-        verify(connection, times(1)).close();
-    }
-
-    @Test
-    void shouldHandleJsonParsingErrorInMethodTestRedisDataWhenWrongJSON() {
-        when(redisClient.connect()).thenReturn(connection);
-        when(connection.sync()).thenReturn(syncCommands);
-        when(syncCommands.get("1")).thenReturn("not-a-json");
-
-        redisService.testRedisData(List.of(1));
-
         verify(syncCommands).get("1");
-        verify(connection).close();
-    }
-
-    @Test
-    void shouldCallClientShutdownInMethodShutdown() {
-        redisService.shutdown();
-        verify(redisClient, times(1)).shutdown();
     }
 }
